Changes regarding converting dto classes to record
